Se renueva el contenido por completo en el index.html

--- a/index.html
+++ b/index.html
@@ -42,16 +42,15 @@
         </div>
     </nav>
     <section class="container container-principal mt-2" data-aos="zoom-out-up" data-aos-duration="3000">
-        <img src="img/principal-optimizado/suplementos-deportivos.jpg" class="img-principal" alt="Imagen principal">
-        <p class="texto-principal">VF SUPLEMENTOS</p>
+        <img src="img/principal-optimizado/home.jpg" class="img-principal" alt="Imagen principal">
     </section>
     <main class="container mt-5">
 
         <h4 class="text-center mt-3">Novedades</h4>
-                    
+
         <section class="contenedor-articulos" data-aos="zoom-in-up" data-aos-duration="2000">
             <div class="articulo">
-                <img src="img/suplementos-optimizados/proteina-usn.jpg" alt="Proteina USN">
+                <img src="img/suplementos-optimizados/proteina-usn.jpg" alt="Proteina USN" class="img_animate">
                 <div class="articulo-contenido">
                     <h5>Proteina USN</h5>
                     <p>$49.990</p>
@@ -59,7 +58,7 @@
                 </div>
             </div>
             <div class="articulo">
-                <img src="img/suplementos-optimizados/creatina-usn.jpg" alt="Creatina USN">
+                <img src="img/suplementos-optimizados/creatina-usn.jpg" alt="Creatina USN" class="img_animate">
                 <div class="articulo-contenido">
                     <h5>Creatina USN 60 servicios</h5>
                     <p>$31.000</p>
@@ -76,156 +75,86 @@
             </div>
 
         </section>
-        <section class="card-deck d-flex bg-white justify-content-center my-2">
-            <div class="card mx-3 card-info" data-aos="fade-right" data-aos-duration="2000">
-                <div class="card-header">
-                    <h6 class="card-title">
-                        Recomendaciones
-                    </h6>
+        <section class="contenedor-articulos">
+            <div class="marca" data-aos="fade-right" data-aos-duration="2000">
+                <div class="marca-image">
+                    <img src="img/sections/aviso-importante.jpg" alt="Recomendaciones" class="img_animate">
                 </div>
-                <div class="card-body">
-                    <blockquote class="blockquote mb-0">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                    </blockquote>
+                <div class="marca-contenido">
+                    <h3>Recomendaciones</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt facilis assumenda ratione
+                        asperiores doloribus aperiam?</p>
                 </div>
             </div>
-            <div class="card mx-3 card-info" data-aos="fade-left" data-aos-duration="2000">
-                <article class="card-header">
-                    <h6 class="card-title">
-                        Retiro y Envío a Regiones
-                    </h6>
-                </article>
-                <article class="card-body">
-                    <blockquote class="blockquote mb-0">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                    </blockquote>
-                </article>
+            <div class="marca" data-aos="fade-left" data-aos-duration="2000">
+                <div class="marca-image">
+                    <img src="img/sections/aviso-envios.jpg" alt="Envios y entregas" class="img_animate">
+                </div>
+                <div class="marca-contenido">
+                    <h3>Envios y Entregas</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex architecto quasi sit, recusandae
+                        repudiandae sequi.</p>
+                </div>
             </div>
         </section>
         <section class="section-absoluto">
             <div class="absoluto-layer layer-bg"></div>
             <div class="absoluto-layer layer-contenido">
                 <h1>Compleméntalo con ejercicio</h1>
-                <p>Recuerda que un suplemento NO funciona por arte de magia!</p>
+                <p class="texto-sombreado">Recuerda que un suplemento NO funciona por arte de magia!</p>
             </div>
         </section>
-        <section class="container text-center bg-light p-2 rounded" data-aos="zoom-in" data-aos-duration="2000">
+        <section class="container text-center p-2" >
             <h4 class="mt-3">Productos más vendidos</h4>
-            <aside class="card-deck d-flex justify-content-center m-3 text-center p-vendidos">
-                <div class="card mx-1 text-center">
-                    <img class="card-img-top img" src="img/suplementos-optimizados/proteina-rule1.jpg"
-                        alt="Proteína Rule 1">
-                    <div class="card-body">
-                        <h4 class="card-title">Proteína Rule 1</h4>
-                        <h5 class="card-title">$54.000</h5>
-                    </div>
-                    <div class="card-footer">
+            <aside class="contenedor-articulos" data-aos="zoom-in" data-aos-duration="2000">
+                <div class="articulo">
+                    <img src="img/suplementos-optimizados/proteina-rule1.jpg" alt="Proteina Rule 1" class="img_animate">
+                    <div class="articulo-contenido">
+                        <h5>Proteina Rule 1</h5>
+                        <p>$49.990</p>
                         <button class="articulo-boton">Comprar</button>
                     </div>
                 </div>
-                <div class="card mx-3 text-center">
-                    <img class="card-img-top img" src="img/suplementos-optimizados/proteina-hexacore.jpg"
-                        alt="Creatina Hexacore">
-                    <div class="card-body">
-                        <h4 class="card-title">Creatina Hexacore</h4>
-                        <h5 class="card-title">$39.000</h5>
-                    </div>
-                    <div class="card-footer">
+                <div class="articulo">
+                    <img src="img/suplementos-optimizados/proteina-hexacore.jpg" alt="Creatina Hexacore" class="img_animate">
+                    <div class="articulo-contenido">
+                        <h5>Creatina Hexacore</h5>
+                        <p>$39.990</p>
                         <button class="articulo-boton">Comprar</button>
                     </div>
                 </div>
-                <div class="card mx-3 text-center">
-                    <img class="card-img-top img" src="img/suplementos-optimizados/omega3.jpg" alt="Omega 3">
-                    <div class="card-body">
-                        <h4 class="card-title">Omega 3</h4>
-                        <h5 class="card-title">$26.000</h5>
-                    </div>
-                    <div class="card-footer">
+                
+                <div class="articulo">
+                    <img src="img/suplementos-optimizados/omega3.jpg" alt="Omega 3" class="img_animate">
+                    <div class="articulo-contenido">
+                        <h5>Omega 3</h5>
+                        <p>$26.990</p>
                         <button class="articulo-boton">Comprar</button>
                     </div>
                 </div>
-                <div class="card mx-1 text-center">
-                    <img class="card-img-top img" src="img/suplementos-optimizados/myprotein.jpg" alt="My Protein">
-                    <div class="card-body">
-                        <h4 class="card-title">My Protein</h4>
-                        <h5 class="card-title">$54.000</h5>
-                    </div>
-                    <div class="card-footer">
+                <div class="articulo">
+                    <img src="img/suplementos-optimizados/king-whey.jpg" alt="King Whey" class="img_animate">
+                    <div class="articulo-contenido">
+                        <h5>King Whey</h5>
+                        <p>$39.990</p>
                         <button class="articulo-boton">Comprar</button>
                     </div>
-                </div>
-                <div class="card mx-3 text-center">
-                    <img class="card-img-top img" src="img/suplementos-optimizados/king-whey.jpg" alt="King Whey">
-                    <div class="card-body">
-                        <h4 class="card-title">King Whey</h4>
-                        <h5 class="card-title">$39.000</h5>
-                    </div>
-                    <div class="card-footer">
+                </div> 
+                <div class="articulo">
+                    <img src="img/suplementos-optimizados/l-arginina-thor.jpg" alt="L-Arginina Thor" class="img_animate">
+                    <div class="articulo-contenido">
+                        <h5>L-Arginina Thor</h5>
+                        <p>$29.990</p>
                         <button class="articulo-boton">Comprar</button>
                     </div>
-                </div>
-                <div class="card mx-3 text-center">
-                    <img class="card-img-top img" src="img/suplementos-optimizados/l-arginina-thor.jpg"
-                        alt="L-Arginina Thor">
-                    <div class="card-body">
-                        <h4 class="card-title">L-Arginina Thor</h4>
-                        <h5 class="card-title">$26.000</h5>
-                    </div>
-                    <div class="card-footer">
-                        <button class="articulo-boton">Comprar</button>
-                    </div>
-                </div>
+                </div>                 
             </aside>
         </section>
-        <section class="card-deck d-flex justify-content-center m-3 text-center section-marcas" data-aos="fade-right"
-            data-aos-duration="1500">
-            <div class="card card-marca">
-                <div class="card-body">
-                    <img src="img/marcas/hexacore.jpg" alt="" class="img producto-img">
-                </div>
-                <div class="card-footer">
-                    <p class="text-card">Hexacore</p>
-                </div>
-            </div>
-            <div class="card card-marca">
-                <div class="card-body">
-                    <img src="img/marcas/gold-standart.jpg" alt="" class="img producto-img">
-                </div>
-                <div class="card-footer">
-                    <p class="text-card">Gold Standart</p>
-                </div>
-            </div>
-            <div class="card card-marca">
-                <div class="card-body">
-                    <img src="img/marcas/muscletech.png" alt="" class="img producto-img">
-                </div>
-                <div class="card-footer">
-                    <p class="text-card">Muscletech</p>
-                </div>
-            </div>
-            <div class="card card-marca">
-                <div class="card-body">
-                    <img src="img/marcas/rule-one.png" alt="" class="img producto-img">
-                </div>
-                <div class="card-footer">
-                    <p class="text-card">Rule 1</p>
-                </div>
-            </div>
-            <div class="card card-marca">
-                <div class="card-body">
-                    <img src="img/marcas/ultimate-nutrition.png" alt="" class="img producto-img">
-                </div>
-                <div class="card-footer">
-                    <p class="text-card">Ultimate Nutrition</p>
-                </div>
-            </div>
-            <div class="card card-marca">
-                <div class="card-body">
-                    <img src="img/marcas/usn.jpg" alt="" class="img producto-img">
-                </div>
-                <div class="card-footer">
-                    <p class="text-card">USN</p>
-                </div>
+        <section class="section-absoluto-regalo">
+            <div class="absoluto-layer layer-bg"></div>
+            <div class="absoluto-layer layer-contenido">
+                <h1>Recibe un shaker de regalo</h1>
+                <p class="texto-sombreado">Por compras superiores a $35.000, te regalaremos un shaker para que te acompañe en tus rutinas de entrenamiento, recuerda hidratarte mientras te ejercitas!</p>
             </div>
         </section>
     </main>
