Se modifica la vista de producto y se modifican algunas clases

--- a/vistas/productos.html
+++ b/vistas/productos.html
@@ -36,144 +36,110 @@
         </div>
     </nav>
     <main class="container my-4">
-        <nav aria-label="breadcrumb" class="contenedor-beadcrumb">
+        <!-- <nav aria-label="breadcrumb" class="contenedor-beadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Productos</li>
             </ol>
-        </nav>
-        <h6>Todos los productos</h6>
-        <section class="card-deck d-flex justify-content-center my-3">
-            <div class="row">
-                <div class="card-deck d-flex justify-content-center my-3">
-                    <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos-optimizados/proteina-usn.jpg" alt="Proteína USN">
-                        <div class="card-body">
-                            <h4 class="card-title">Proteína USN 5 lbs</h4>
-                            <h5 class="card-title text-center">$49.000</h5>
-                        </div>
-                        <div class="card-footer">
-                            <button class="btn btn-outline-success">Comprar</button>
-                        </div>
-                    </div>
-                    <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos-optimizados/creatina-usn.jpg" alt="Creatina USN">
-                        <div class="card-body">
-                            <h4 class="card-title">Creatina USN 60 servicios</h4>
-                            <h5 class="card-title text-center">$31.000</h5>
-                        </div>
-                        <div class="card-footer">
-                            <button class="btn btn-outline-success">Comprar</button>
-                        </div>
-                    </div>
-                    <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos-optimizados/pre-entreno-w-nutrition.jpg" alt="Pre-Workout Winkler Nutrition">
-                        <div class="card-body">
-                            <h4 class="card-title">Pre-Workout W Nutrition</h4>
-                            <h5 class="card-title">$21.000</h5>
-                        </div>
-                        <div class="card-footer">
-                            <button class="btn btn-outline-success">Comprar</button>
-                        </div>
-                    </div>
-                    <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos-optimizados/bcaa-universal.jpg" alt="BCAAs Universal">
-                        <div class="card-body">
-                            <h4 class="card-title">BCAAs Universal</h4>
-                            <h5 class="card-title">$49.000</h5>
-                        </div>
-                        <div class="card-footer">
-                            <button class="btn btn-outline-success">Comprar</button>
-                        </div>
-                    </div>
+        </nav> -->
+
+        <h4>Todos los productos</h4>
+        <!-- <section class="card-deck d-flex justify-content-center my-3"> -->
+        <section class="contenedor-articulos my-3">
+            <div class="articulo">
+                <img src="../img/suplementos-optimizados/proteina-usn.jpg" alt="Proteina USN" class="img_animate">
+                <div class="articulo-contenido">
+                    <h5>Proteina USN</h5>
+                    <p>$49.990</p>
+                    <button class="articulo-boton">Comprar</button>
                 </div>
             </div>
-            <div class="row">
-                <div class="card-deck d-flex justify-content-center my-3">
-                    <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos-optimizados/nitrotech.jpg" alt="Nitrotech">
-                        <div class="card-body">
-                            <h4 class="card-title">Nitrotech</h4>
-                            <h5 class="card-title text-center">$59.000</h5>
-                        </div>
-                        <div class="card-footer">
-                            <button class="btn btn-outline-success">Comprar</button>
-                        </div>
-                    </div>
-                    <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos-optimizados/bpi.jpg" alt="Protina BPI">
-                        <div class="card-body">
-                            <h4 class="card-title">Proteina BPI</h4>
-                            <h5 class="card-title text-center">$42.490</h5>
-                        </div>
-                        <div class="card-footer">
-                            <button class="btn btn-outline-success">Comprar</button>
-                        </div>
-                    </div>
-                    <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos-optimizados/pro-win.jpg" alt="Pro-Win">
-                        <div class="card-body">
-                            <h4 class="card-title">Pro-Win W Nutrition</h4>
-                            <h5 class="card-title">$59.000</h5>
-                        </div>
-                        <div class="card-footer">
-                            <button class="btn btn-outline-success">Comprar</button>
-                        </div>
-                    </div>
-                    <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos-optimizados/syntha6.jpg" alt="Proteina Syntha 6">
-                        <div class="card-body">
-                            <h4 class="card-title">Syntha 6</h4>
-                            <h5 class="card-title">$61.000</h5>
-                        </div>
-                        <div class="card-footer">
-                            <button class="btn btn-outline-success">Comprar</button>
-                        </div>
-                    </div>
+            <div class="articulo">
+                <img class="img img_animate" src="../img/suplementos-optimizados/creatina-usn.jpg" alt="Creatina USN">
+                <div class="articulo-contenido">
+                    <h5>Creatina USN 60 servicios</h5>
+                    <p>$31.000</p>
+                    <button class="articulo-boton">Comprar</button>
                 </div>
             </div>
-            <div class="row">
-                <div class="card-deck d-flex justify-content-center my-3">
-                    <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos-optimizados/iso100.jpg" alt="ISO 100">
-                        <div class="card-body">
-                            <h4 class="card-title">ISO 100</h4>
-                            <h5 class="card-title text-center">$49.000</h5>
-                        </div>
-                        <div class="card-footer">
-                            <button class="btn btn-outline-success">Comprar</button>
-                        </div>
-                    </div>
-                    <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos-optimizados/l-arginina.jpg" alt="L-Arginina">
-                        <div class="card-body">
-                            <h4 class="card-title">L-Arginina</h4>
-                            <h5 class="card-title text-center">$31.000</h5>
-                        </div>
-                        <div class="card-footer">
-                            <button class="btn btn-outline-success">Comprar</button>
-                        </div>
-                    </div>
-                    <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos-optimizados/zma.png" alt="ZMA">
-                        <div class="card-body">
-                            <h4 class="card-title">ZMA</h4>
-                            <h5 class="card-title">$21.000</h5>
-                        </div>
-                        <div class="card-footer">
-                            <button class="btn btn-outline-success">Comprar</button>
-                        </div>
-                    </div>
-                    <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos-optimizados/creatina-platinum.jpg" alt="Creatina platinum">
-                        <div class="card-body">
-                            <h4 class="card-title">Creatina Platinum</h4>
-                            <h5 class="card-title">$34.500</h5>
-                        </div>
-                        <div class="card-footer">
-                            <button class="btn btn-outline-success">Comprar</button>
-                        </div>
-                    </div>
+            <div class="articulo">
+                <img class="img img_animate" src="../img/suplementos-optimizados/pre-entreno-w-nutrition.jpg" alt="Pre-Workout Winkler Nutrition">
+                <div class="articulo-contenido">
+                    <h5>Pre-Workout W Nutrition</h5>
+                    <p>$21.000</p>
+                    <button class="articulo-boton">Comprar</button>
+                </div>
+            </div>
+            <div class="articulo">
+                <img class="img img_animate" src="../img/suplementos-optimizados/bcaa-universal.jpg" alt="BCAAs Universal">
+                <div class="articulo-contenido">
+                    <h5>BCAAs Universal</h5>
+                    <p>$49.000</p>
+                    <button class="articulo-boton">Comprar</button>
+                </div>
+            </div>
+            <div class="articulo">
+                <img class="img img_animate" src="../img/suplementos-optimizados/nitrotech.jpg" alt="Nitrotech">
+                <div class="articulo-contenido">
+                    <h5>Nitrotech</h5>
+                    <p>$59.000</p>
+                    <button class="articulo-boton">Comprar</button>
+                </div>
+            </div>
+            <div class="articulo">
+                <img class="img img_animate" src="../img/suplementos-optimizados/bpi.jpg" alt="Protina BPI">
+                <div class="articulo-contenido">
+                    <h5>Proteina BPI</h5>
+                    <p>$42.490</p>
+                    <button class="articulo-boton">Comprar</button>
+                </div>
+            </div>
+            <div class="articulo">
+                <img class="img img_animate" src="../img/suplementos-optimizados/pro-win.jpg" alt="Pro-Win">
+                <div class="articulo-contenido">
+                    <h5>Pro-Win W Nutrition</h5>
+                    <p>$59.000</p>
+                    <button class="articulo-boton">Comprar</button>
+                </div>
+            </div>
+            <div class="articulo">
+                <img class="img img_animate" src="../img/suplementos-optimizados/syntha6.jpg" alt="Proteina Syntha 6">
+                <div class="articulo-contenido">
+                    <h5>Syntha 6</h5>
+                    <p>$61.000</p>
+                    <button class="articulo-boton">Comprar</button>
+                </div>
+            </div>
+            <div class="articulo">
+                <img class="img img_animate" src="../img/suplementos-optimizados/iso100.jpg" alt="ISO 100">
+                <div class="articulo-contenido">
+                    <h5 class="card-title">ISO 100</h5>
+                    <p>$49.000</p>
+                    <button class="articulo-boton">Comprar</button>
+                </div>
+            </div>
+            <div class="articulo">
+                <img class="img img_animate" src="../img/suplementos-optimizados/l-arginina.jpg" alt="L-Arginina">
+                <div class="articulo-contenido">
+                    <h5>L-Arginina</h5>
+                    <p>$31.000</p>
+                    <button class="articulo-boton">Comprar</button>
+                </div>
+            </div>
+            <div class="articulo">
+                <img class="img img_animate" src="../img/suplementos-optimizados/zma.png" alt="ZMA">
+                <div class="articulo-contenido">
+                    <h5>ZMA</h5>
+                    <p>$21.000</p>
+                    <button class="articulo-boton">Comprar</button>
+                </div>
+            </div>
+            <div class="articulo">
+                <img class="img img_animate" src="../img/suplementos-optimizados/creatina-platinum.jpg" alt="Creatina platinum">
+                <div class="articulo-contenido">
+                    <h5>Creatina Platinum</h5>
+                    <p>$34.500</p>
+                    <button class="articulo-boton">Comprar</button>
                 </div>
             </div>
         </section>      
