--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                 </div>
             </div>
             <div class="articulo">
-                <img src="img/suplementos-optimizados/pre-entreno-w-nutrition.jpg" alt="Pre-Workout Winkler Nutrition">
+                <img src="img/suplementos-optimizados/pre-entreno-w-nutrition.jpg" alt="Pre-Workout Winkler Nutrition"
+                    class="img_animate">
                 <div class="articulo-contenido">
                     <h5>Pre-Workout W Nutrition</h5>
                     <p>$21.000</p>
@@ -76,21 +77,21 @@
 
         </section>
         <section class="contenedor-articulos">
-            <div class="marca" data-aos="fade-right" data-aos-duration="2000">
-                <div class="marca-image">
+            <div class="aviso" data-aos="fade-right" data-aos-duration="2000">
+                <div class="aviso-image">
                     <img src="img/sections/aviso-importante.jpg" alt="Recomendaciones" class="img_animate">
                 </div>
-                <div class="marca-contenido">
+                <div class="aviso-contenido">
                     <h3>Recomendaciones</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt facilis assumenda ratione
                         asperiores doloribus aperiam?</p>
                 </div>
             </div>
-            <div class="marca" data-aos="fade-left" data-aos-duration="2000">
-                <div class="marca-image">
+            <div class="aviso" data-aos="fade-left" data-aos-duration="2000">
+                <div class="aviso-image">
                     <img src="img/sections/aviso-envios.jpg" alt="Envios y entregas" class="img_animate">
                 </div>
-                <div class="marca-contenido">
+                <div class="aviso-contenido">
                     <h3>Envios y Entregas</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex architecto quasi sit, recusandae
                         repudiandae sequi.</p>
@@ -104,7 +105,7 @@
                 <p class="texto-sombreado">Recuerda que un suplemento NO funciona por arte de magia!</p>
             </div>
         </section>
-        <section class="container text-center p-2" >
+        <section class="container text-center p-2">
             <h4 class="mt-3">Productos más vendidos</h4>
             <aside class="contenedor-articulos" data-aos="zoom-in" data-aos-duration="2000">
                 <div class="articulo">
@@ -116,14 +117,15 @@
                     </div>
                 </div>
                 <div class="articulo">
-                    <img src="img/suplementos-optimizados/proteina-hexacore.jpg" alt="Creatina Hexacore" class="img_animate">
+                    <img src="img/suplementos-optimizados/proteina-hexacore.jpg" alt="Creatina Hexacore"
+                        class="img_animate">
                     <div class="articulo-contenido">
                         <h5>Creatina Hexacore</h5>
                         <p>$39.990</p>
                         <button class="articulo-boton">Comprar</button>
                     </div>
                 </div>
-                
+
                 <div class="articulo">
                     <img src="img/suplementos-optimizados/omega3.jpg" alt="Omega 3" class="img_animate">
                     <div class="articulo-contenido">
@@ -139,22 +141,75 @@
                         <p>$39.990</p>
                         <button class="articulo-boton">Comprar</button>
                     </div>
-                </div> 
+                </div>
                 <div class="articulo">
-                    <img src="img/suplementos-optimizados/l-arginina-thor.jpg" alt="L-Arginina Thor" class="img_animate">
+                    <img src="img/suplementos-optimizados/l-arginina-thor.jpg" alt="L-Arginina Thor"
+                        class="img_animate">
                     <div class="articulo-contenido">
                         <h5>L-Arginina Thor</h5>
                         <p>$29.990</p>
                         <button class="articulo-boton">Comprar</button>
                     </div>
-                </div>                 
+                </div>
             </aside>
         </section>
         <section class="section-absoluto-regalo">
             <div class="absoluto-layer layer-bg"></div>
             <div class="absoluto-layer layer-contenido">
                 <h1>Recibe un shaker de regalo</h1>
-                <p class="texto-sombreado">Por compras superiores a $35.000, te regalaremos un shaker para que te acompañe en tus rutinas de entrenamiento, recuerda hidratarte mientras te ejercitas!</p>
+                <p class="texto-sombreado">Por compras superiores a $35.000, te regalaremos un shaker para que te
+                    acompañe en tus rutinas de entrenamiento, recuerda hidratarte mientras te ejercitas!</p>
+            </div>
+        </section>
+        <section class="card-deck d-flex justify-content-center m-3 text-center section-marcas" data-aos="fade-right"
+            data-aos-duration="1500">
+            <div class="marca">
+                <div class="marca-image">
+                    <img src="img/marcas-optimizado/hexacore.jpg" alt="" class="img producto-img">
+                </div>
+                <div class="marca-contenido">
+                    <h3 class="text-card">Hexacore</h3>
+                </div>
+            </div>
+            <div class="marca">
+                <div class="marca-image">
+                    <img src="img/marcas-optimizado/gold-standart.jpg" alt="" class="img producto-img">
+                </div>
+                <div class="marca-contenido">
+                    <h3 class="text-card">Optimum Nutrition</h3>
+                </div>
+            </div>
+            <div class="marca">
+                <div class="marca-image">
+                    <img src="img/marcas-optimizado/muscletech.png" alt="" class="img producto-img">
+                </div>
+                <div class="marca-contenido">
+                    <h3 class="text-card">Muscletech</h3>
+                </div>
+            </div>
+            <div class="marca">
+                <div class="marca-image">
+                    <img src="img/marcas-optimizado/rule-one.png" alt="" class="img producto-img">
+                </div>
+                <div class="marca-contenido">
+                    <h3 class="text-card">Rule 1</h3>
+                </div>
+            </div>
+            <div class="marca">
+                <div class="marca-image">
+                    <img src="img/marcas-optimizado/ultimate-nutrition.png" alt="" class="img producto-img">
+                </div>
+                <div class="marca-contenido">
+                    <h3 class="text-card">Ultimate Nutrition</h3>
+                </div>
+            </div>
+            <div class="marca">
+                <div class="marca-image">
+                    <img src="img/marcas-optimizado/usn.jpg" alt="" class="img producto-img">
+                </div>
+                <div class="marca-contenido">
+                    <h3 class="text-card">USN</h3>
+                </div>
             </div>
         </section>
     </main>
@@ -200,6 +255,7 @@
                 </div>
             </div>
         </section>
+
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
