Se agrega nueva vista de preguntas frecuentes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                 <li class="link-item"><a href="vistas/productos.html">Productos</a></li>
                 <li class="link-item"><a href="vistas/contacto.html">Contacto</a></li>
                 <li class="link-item"><a href="vistas/marcas.html">Marcas</a></li>
-                <li><button>Cuenta</button></li>
+                <li class="link-item"><a href="vistas/preguntas_frecuentes.html">Preguntas Frecuentes</a></li>
+                <li><button class="boton-cuenta">Cuenta</button></li>
             </ul>
         </div>
     </nav>
@@ -49,23 +50,23 @@
         <h4 class="text-center mt-3">Novedades</h4>
 
         <section class="contenedor-articulos" data-aos="zoom-in-up" data-aos-duration="2000">
-            <div class="articulo">
+            <article class="articulo">
                 <img src="img/suplementos-optimizados/proteina-usn.jpg" alt="Proteina USN" class="img_animate">
                 <div class="articulo-contenido">
                     <h5>Proteina USN</h5>
                     <p>$49.990</p>
                     <button class="articulo-boton">Comprar</button>
                 </div>
-            </div>
-            <div class="articulo">
+            </article>
+            <article class="articulo">
                 <img src="img/suplementos-optimizados/creatina-usn.jpg" alt="Creatina USN" class="img_animate">
                 <div class="articulo-contenido">
                     <h5>Creatina USN 60 servicios</h5>
                     <p>$31.000</p>
                     <button class="articulo-boton">Comprar</button>
                 </div>
-            </div>
-            <div class="articulo">
+            </article>
+            <article class="articulo">
                 <img src="img/suplementos-optimizados/pre-entreno-w-nutrition.jpg" alt="Pre-Workout Winkler Nutrition"
                     class="img_animate">
                 <div class="articulo-contenido">
@@ -73,7 +74,7 @@
                     <p>$21.000</p>
                     <button class="articulo-boton">Comprar</button>
                 </div>
-            </div>
+            </article>
 
         </section>
         <section class="contenedor-articulos">
@@ -108,15 +109,15 @@
         <section class="container text-center p-2">
             <h4 class="mt-3">Productos más vendidos</h4>
             <aside class="contenedor-articulos" data-aos="zoom-in" data-aos-duration="2000">
-                <div class="articulo">
+                <article class="articulo">
                     <img src="img/suplementos-optimizados/proteina-rule1.jpg" alt="Proteina Rule 1" class="img_animate">
                     <div class="articulo-contenido">
                         <h5>Proteina Rule 1</h5>
                         <p>$49.990</p>
                         <button class="articulo-boton">Comprar</button>
                     </div>
-                </div>
-                <div class="articulo">
+                </article>
+                <article class="articulo">
                     <img src="img/suplementos-optimizados/proteina-hexacore.jpg" alt="Creatina Hexacore"
                         class="img_animate">
                     <div class="articulo-contenido">
@@ -124,25 +125,25 @@
                         <p>$39.990</p>
                         <button class="articulo-boton">Comprar</button>
                     </div>
-                </div>
+                </article>
 
-                <div class="articulo">
+                <article class="articulo">
                     <img src="img/suplementos-optimizados/omega3.jpg" alt="Omega 3" class="img_animate">
                     <div class="articulo-contenido">
                         <h5>Omega 3</h5>
                         <p>$26.990</p>
                         <button class="articulo-boton">Comprar</button>
                     </div>
-                </div>
-                <div class="articulo">
+                </article>
+                <article class="articulo">
                     <img src="img/suplementos-optimizados/king-whey.jpg" alt="King Whey" class="img_animate">
                     <div class="articulo-contenido">
                         <h5>King Whey</h5>
                         <p>$39.990</p>
                         <button class="articulo-boton">Comprar</button>
                     </div>
-                </div>
-                <div class="articulo">
+                </article>
+                <article class="articulo">
                     <img src="img/suplementos-optimizados/l-arginina-thor.jpg" alt="L-Arginina Thor"
                         class="img_animate">
                     <div class="articulo-contenido">
@@ -150,7 +151,7 @@
                         <p>$29.990</p>
                         <button class="articulo-boton">Comprar</button>
                     </div>
-                </div>
+                </article>
             </aside>
         </section>
         <section class="section-absoluto-regalo">
@@ -161,8 +162,7 @@
                     acompañe en tus rutinas de entrenamiento, recuerda hidratarte mientras te ejercitas!</p>
             </div>
         </section>
-        <section class="card-deck d-flex justify-content-center m-3 text-center section-marcas" data-aos="fade-right"
-            data-aos-duration="1500">
+        <section class="section-marcas" data-aos="fade-right" data-aos-duration="1500">
             <div class="marca">
                 <div class="marca-image">
                     <img src="img/marcas-optimizado/hexacore.jpg" alt="" class="img producto-img">
