--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -29,7 +29,8 @@
                 <li class="link-item"><a href="productos.html">Productos</a></li>
                 <li class="link-item"><a href="#">Contacto</a></li>
                 <li class="link-item"><a href="marcas.html">Marcas</a></li>
-                <li><button>Cuenta</button></li>
+                <li class="link-item"><a href="preguntas_frecuentes.html">Preguntas Frecuentes</a></li>
+                <li><button class="boton-cuenta">Cuenta</button></li>
             </ul>
         </div>
     </nav>
