--- a/vistas/productos.html
+++ b/vistas/productos.html
@@ -31,7 +31,8 @@
                 <li class="link-item"><a href="#">Productos</a></li>
                 <li class="link-item"><a href="contacto.html">Contacto</a></li>
                 <li class="link-item"><a href="marcas.html">Marcas</a></li>
-                <li><button>Cuenta</button></li>
+                <li class="link-item"><a href="preguntas_frecuentes.html">Preguntas Frecuentes</a></li>
+                <li><button class="boton-cuenta">Cuenta</button></li>
             </ul>
         </div>
     </nav>
